SERVER-6179 support multiple $group in sharded agg